@@ -1,11 +1,11 @@
 package com.bookmakerApp.service.impl;
 
 import com.bookmakerApp.model.EventModel;
+import com.bookmakerApp.model.SportModel;
 import com.bookmakerApp.model.football.FootballMatchModel;
 import com.bookmakerApp.repository.EventRepository;
 import com.bookmakerApp.repository.SportRepository;
 import com.bookmakerApp.service.interfaces.EventScheduledTaskService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
@@ -13,17 +13,19 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Qualifier("EventScheduledTaskServiceImpl")
-public class EventScheduledTaskServiceImpl extends DefaultEventServiceImpl implements EventScheduledTaskService {
+public class EventScheduledTaskServiceImpl extends
+        DefaultEventServiceImpl implements EventScheduledTaskService {
 
-    @Autowired
-    private FootballMatchSimulatorServiceImpl footballMatchSimulatorService;
+    private final FootballMatchSimulatorServiceImpl footballMatchSimulatorService;
 
-    public EventScheduledTaskServiceImpl(EventRepository eventRepository, SportRepository sportRepository) {
+    public EventScheduledTaskServiceImpl(EventRepository eventRepository,
+                                         SportRepository sportRepository,
+                                         FootballMatchSimulatorServiceImpl footballMatchSimulatorService) {
         super(eventRepository, sportRepository);
+        this.footballMatchSimulatorService = footballMatchSimulatorService;
     }
 
 
@@ -34,12 +36,18 @@ public class EventScheduledTaskServiceImpl extends DefaultEventServiceImpl imple
         Date date = new Date();
         List<EventModel> events = getEventByDateBefore(date);
         List<EventModel> footballMatchEvents = events.stream()
-                .filter(event -> event.getSport() instanceof FootballMatchModel
-                        && !event.isResultIsChecked())
-                .collect(Collectors.toList());
-        for (EventModel footballMatch : footballMatchEvents) {
-            if(!footballMatch.isResultIsChecked())
+                .filter(this::isFootballMatchWithNoCheckedResult)
+                .toList();
+
+        footballMatchEvents.forEach(footballMatch -> {
+            if (!footballMatch.isResultIsChecked()) {
                 footballMatchSimulatorService.simulate(footballMatch);
-        }
+            }
+        });
+    }
+
+    private boolean isFootballMatchWithNoCheckedResult(EventModel event) {
+        SportModel footballMatch = event.getSport();
+        return footballMatch instanceof FootballMatchModel && !event.isResultIsChecked();
     }
 }
